bk_ida/gccida/g0/df_bb_ud_chain_create
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ud_chain_create/src/df.c:1979:4: error: expected ';' after expression
rtx reg; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ud_chain_create/src/df.c:1979:5: error: use of undeclared identifier 'reg'
rtx reg; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ud_chain_create/src/df.c:1990:4: error: expected ';' after expression
rtx insn; // [rsp+68h] [rbp-8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ud_chain_create/src/df.c:1990:5: error: use of undeclared identifier 'insn'
rtx insn; // [rsp+68h] [rbp-8h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ud_chain_create/src/df.c:1992:17: error: expected identifier or '('
 struct bb_info = &df_0->bbs[bb->index]; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ud_chain_create/src/df.c:1995:7: error: use of undeclared identifier 'insn'
for ( insn = bb->head; insn && insn != bb->end[1].fld[0].rtx; insn = insn[1].fld[0].rtx ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ud_chain_create/src/df.c:1995:32: error: use of undeclared identifier 'insn'
for ( insn = bb->head; insn && insn != bb->end[1].fld[0].rtx; insn = insn[1].fld[0].rtx ) 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ud_chain_create/src/df.c:1995:24: error: use of undeclared identifier 'insn'
for ( insn = bb->head; insn && insn != bb->end[1].fld[0].rtx; insn = insn[1].fld[0].rtx ) 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ud_chain_create/src/df.c:1995:63: error: use of undeclared identifier 'insn'
for ( insn = bb->head; insn && insn != bb->end[1].fld[0].rtx; insn = insn[1].fld[0].rtx ) 
                                                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ud_chain_create/src/df.c:1995:70: error: use of undeclared identifier 'insn'
for ( insn = bb->head; insn && insn != bb->end[1].fld[0].rtx; insn = insn[1].fld[0].rtx ) 
                                                                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ud_chain_create/src/df.c:1997:7: error: use of undeclared identifier 'insn'
uid = insn->fld[0].rtuint; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ud_chain_create/src/df.c:1998:27: error: use of undeclared identifier 'insn'
if ( rtx_class[*( _WORD *)insn] == 105 ) 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ud_chain_create/src/df.c:2027:1: error: use of undeclared identifier 'reg'
reg = def_0->reg->fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ud_chain_create/src/df.c:2029:1: error: use of undeclared identifier 'reg'
reg = def_0->reg; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ud_chain_create/src/df.c:2030:14: error: use of undeclared identifier 'reg'
reg_def_last[reg->fld[0].rtint] = def_0; 
             ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_ud_chain_create/src/obj/df.o] Error 1
